[gd_scene load_steps=6 format=3 uid="uid://27dv2va7nifm"]

[ext_resource type="Script" path="res://scripts/blocks/timer_block.gd" id="1_2m85q"]
[ext_resource type="Texture2D" uid="uid://dxvoxorpid8br" path="res://icon.svg" id="1_7xby5"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8j68n"]

[sub_resource type="LabelSettings" id="LabelSettings_bqlvd"]
font_size = 1000

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jnmw6"]

[node name="TimerBlock" type="CollisionShape2D" groups=["Block"]]
shape = SubResource("RectangleShape2D_8j68n")
script = ExtResource("1_2m85q")

[node name="TimeoutTimer" type="Timer" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.155, 0.155)
texture = ExtResource("1_7xby5")

[node name="TimerText" type="Node2D" parent="."]
scale = Vector2(0.01, 0.01)

[node name="Label" type="Label" parent="TimerText"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -285.5
offset_top = -681.0
offset_right = 285.5
offset_bottom = 681.0
grow_horizontal = 2
grow_vertical = 2
text = "8
"
label_settings = SubResource("LabelSettings_bqlvd")
horizontal_alignment = 1

[node name="Area2D" type="Area2D" parent="." groups=["Timer"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_jnmw6")
